Improve SpearBot